<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="@dimen/reg_margin"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/page_nav_icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/why_this"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Why This?"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textColor="@android:color/white"/>

    <EditText android:id="@+id/edittext_doctorid"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:background="@color/home_button_text"
        android:textColor="#000000"
        android:singleLine="true"
        android:maxLength="10"
        android:inputType="number"
        android:hint="@string/doctor_hint"
        android:textSize="@dimen/text_size_edit"
        android:layout_height="wrap_content" />

    <EditText android:id="@+id/edittext_firstname"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/home_button_text"
        android:inputType="textCapWords"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/firstname_hint"
        android:textColor="#000000"
        android:singleLine="true"
        android:textSize="@dimen/text_size_edit"
        android:layout_height="wrap_content" />

    <EditText android:id="@+id/edittext_lastname"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/home_button_text"
        android:inputType="textCapSentences"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/lastname_hint"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_edit"
        android:singleLine="true"
        android:layout_height="wrap_content" />



    <EditText android:id="@+id/edittext_mobile"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/home_button_text"
        android:textColor="#000000"
        android:inputType="number"
        android:textSize="@dimen/text_size_edit"
        android:maxLength="10"
        android:singleLine="true"
        android:hint="@string/mobile_hint"
        android:layout_height="wrap_content" />

    <LinearLayout android:id="@+id/add_mobile_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/addMobiletextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@mipmap/add_icon"
            android:layout_marginTop="10dp"
            android:textColor="@color/home_button_text"
            android:text="@string/add_mobile"/>
    </LinearLayout>

    <EditText android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/home_button_text"
        android:textColor="#000000"
        android:textSize="@dimen/text_size_edit"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:singleLine="true"
        android:layout_height="wrap_content" />

    <LinearLayout android:id="@+id/add_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:id="@+id/altEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/add_icon"
            android:textColor="@color/home_button_text"
            android:text="@string/alt_email"/>
    </LinearLayout>

    <!--<at.markushi.ui.CircleButton-->
        <!--android:id="@+id/uploadImage"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:layout_marginBottom="30dp"-->
        <!--android:src="@drawable/upload_image"-->
        <!--android:onClick="onImageClick"/>-->
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/reg_button" />
</LinearLayout>
    </ScrollView>